Import Debian version 1.0.90+parrot0
debootstrap (1.0.90+parrot0) testing; urgency=medium

  * Import Debian version.
  * Import Parrot scripts.

--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,8 @@ ifeq (0,$(shell dpkg-vendor --derives-from Ubuntu; echo $$?))
   KEYRING := ubuntu-keyring
 else ifeq (0,$(shell dpkg-vendor --derives-from Tanglu; echo $$?))
   KEYRING := tanglu-archive-keyring
+else ifeq (0,$(shell dpkg-vendor --derives-from Parrot; echo $$?))
+  KEYRING := parrot-archive-keyring
 else
   KEYRING := debian-archive-keyring
 endif
@@ -32,9 +34,6 @@ override_dh_auto_install:
 		debian/debootstrap-udeb/usr/share/debootstrap/scripts/feisty \
 		debian/debootstrap-udeb/usr/share/debootstrap/scripts/*.buildd \
 		debian/debootstrap-udeb/usr/share/debootstrap/scripts/*.fakechroot \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/stable \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/testing \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/unstable
 
 override_dh_gencontrol:
 	dh_gencontrol -- -Vkeyring=$(KEYRING)
