--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,19 @@ Source: debootstrap
 Section: admin
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
-Uploaders: Junichi Uekawa <dancer@debian.org>, Colin Watson <cjwatson@debian.org>, Christian Perrier <bubulle@debian.org>, Steve McIntyre <93sam@debian.org>
+Uploaders: Junichi Uekawa <dancer@debian.org>, Colin Watson <cjwatson@debian.org>, Christian Perrier <bubulle@debian.org>, Steve McIntyre <93sam@debian.org>,
+           Hideki Yamane <henrich@debian.org>,
 Build-Depends: debhelper (>= 9)
-Standards-Version: 4.1.1
-Vcs-Browser: https://anonscm.debian.org/cgit/d-i/debootstrap.git
-Vcs-Git: https://anonscm.debian.org/git/d-i/debootstrap.git
+Standards-Version: 4.3.0
+Vcs-Browser: https://salsa.debian.org/installer-team/debootstrap
+Vcs-Git: https://salsa.debian.org/installer-team/debootstrap.git
 
 Package: debootstrap
 Architecture: all
 Depends: ${misc:Depends}, wget
-Recommends: gnupg, ${keyring}
+Recommends: gnupg, ${keyring}, arch-test (>= 0.11~),
+Suggests: ubuntu-archive-keyring,
+          squid-deb-proxy-client,
 Description: Bootstrap a basic Debian system
  debootstrap is used to create a Debian base system from scratch,
  without requiring the availability of dpkg or apt. It does this by
