--- a/debian/rules
+++ b/debian/rules
@@ -4,8 +4,10 @@ ifeq (0,$(shell dpkg-vendor --derives-from Ubuntu; echo $$?))
   KEYRING := ubuntu-keyring
 else ifeq (0,$(shell dpkg-vendor --derives-from Tanglu; echo $$?))
   KEYRING := tanglu-archive-keyring
+else ifeq (0,$(shell dpkg-vendor --derives-from Kali; echo $$?))
+  KEYRING := kali-archive-keyring
 else
-  KEYRING := parrot-archive-keyring
+  KEYRING := debian-archive-keyring
 endif
 
 %:
@@ -19,19 +21,6 @@ override_dh_auto_install:
 	
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/debootstrap
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/debootstrap-udeb
-	
-	# remove scripts not needed by d-i
-	-rm -f debian/debootstrap-udeb/usr/share/debootstrap/scripts/potato \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/woody \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/sarge \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/warty \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/hoary \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/breezy \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/dapper \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/edgy \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/feisty \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/*.buildd \
-		debian/debootstrap-udeb/usr/share/debootstrap/scripts/*.fakechroot \
 
 override_dh_gencontrol:
 	dh_gencontrol -- -Vkeyring=$(KEYRING)
